fixed symbol for loki

--- a/config_loki.json
+++ b/config_loki.json
@@ -1,6 +1,6 @@
 {
     "coin": "Loki",
-    "symbol": "LOKI",
+    "symbol": "LOK",
     "coinUnits": 1000000000,
     "coinDifficultyTarget": 120,
 
